# iLab2

./: .gitignore  .gitmodules  README.md  basic_compilation.mk  basic_compilation_bwd.mk  basic_compilation_fwd.mk  basic_tests.mk
1. Cache/: Makefile  README.md  temp.cpp
1. Cache/include/: cache.h  cache_realization.h  database.h
1. Cache/src/: example.cpp
1. Cache/test/: graph.h  graph_realization.h  test_efficiency.cpp  test_lru.cpp  testing_facilities.h  timer.h
2. Figures/: .gitignore  Makefile  geometry.cpp  geometry.h  geometry_impl.h  geometry_intersections.h  geometry_intersections_impl.cpp  geometry_intersections_impl.h  geometry_nintersections.cpp  geometry_nintersections.h  geometry_templates_realization.h  other.h  test.cpp  unit_test.cpp
2. Figures/test/: test_nintersections_trg_trg.cpp  trggen.cpp  unit_test.cpp
2. Figures/test/data/: 1.input  2.input  3.input  4.input
4. Matrix/: Makefile
4. Matrix/include/: matrix.h  matrix_impl.h  memory_control.h  type_conversions.h
4. Matrix/maths/: Makefile
4. Matrix/maths/include/: matrix.h  matrix_impl.h  memory_control.h
4. Matrix/maths/test/: determinant.cpp  numgen.cpp  unit_test.cpp
4. Matrix/physics/: Makefile
4. Matrix/physics/include/: electric_circuit.h  electronic_circuit.h  (+1 more)
4. Matrix/src/: matrix.cpp
4. Matrix/test/: unit_test.cpp
5. ParaCL/: CMakeLists.txt
5. ParaCL/include/: ast_evaluator.h  driver.h  iast_handler.h  inode.h  lexer.h  node.h  symtab.h
5. ParaCL/src/: debug.h  lexer.l  main.cpp  node.cpp  node_deduce_implicit_types.cpp  node_type_deduction.cpp  parser.y
(+38 files in other folders)
